--- a/libs/slider/exemple.html
+++ b/libs/slider/exemple.html
@@ -1,18 +1,15 @@
 <!-- inclut de base dans l'admin -->
 <link rel="stylesheet" type="text/css" href="<?=LIBSWEBROOT?>slider/css/slider.css">
-<script src="<?=LIBSWEBROOT?>popup/js/ease.js"></script>
-<script src="<?=LIBSWEBROOT?>popup/js/slider.js"></script>
+<script src="<?=LIBSWEBROOT?>slider/js/ease.js"></script>
+<script src="<?=LIBSWEBROOT?>slider/js/slider.js"></script>
 
 <div class="slider" id="slider">
 	<section class="contenu-slider">
 		<div id="slide1"  class="slide courant">
 			<div class="inner">
 				<div>
-					<h3>test de texte</h3>
-					<p>test slide 1df gdf gdf gdf gdf gdff ghgh ghjg  ghj ghj ghj ghj ghj ghj gd df gdf g</p>
-					<p>test slide 1df gdf gdf gdf gdf gdf gd df gdf g</p>
-					<p>test slide 1df gdf gdf gdf gdf gdf gd df gdf g</p>
-					<p>test slide 1df gdf gdf gdf gdf gdf gd df gdf g</p>
+					<h3>Karaté Do</h3>
+					<p>Découvrez toutes nos activités</p>
 				</div>
 			</div>
 			<img src="images/slider.jpg" alt="">
